# roomie-cpp

./: .gitignore  00buildRoomie.sh  CMakeLists.txt  roomie_builder.sh
config/: controller-howsrv-3.json
g5k/: configure-lille.py  configure-toulouse.py  runner-lille.sh  runner-toulouse.sh  trace_gpu_perfs.py
g5k/setups/: setup_chirop.sh  setup_chuc.sh  setup_estats.sh  setup_montcalm.sh
logger/infaas/: howsrv-3_worker_2722.csv
src/: CMakeLists.txt  main.cpp
src/config/: __query_generator-howsrv-3.json  query_generator-howsrv-3.json  worker_01.json  worker_02.json
src/config/infaas/: __query_generator-howsrv-3.json  controller-howsrv-3.json  query_generator-howsrv-3.json  worker_howsrv-3.json
src/manager/: CMakeLists.txt  controller.h  engine.h  poisson_zipf_query_generator.h  worker.h
src/models/: CMakeLists.txt  model.cpp  model.hpp
src/network/: CMakeLists.txt  message.h  websocket.cpp  websocket.h
src/networking/: CMakeLists.txt  message.h  port.h
src/scaling/: CMakeLists.txt  auto_scaler.h
src/scheduling/: CMakeLists.txt  base_scheduler.h  infaas_scheduler.h  roomie_scheduler.h  usher_scheduler.h
src/utils/: CMakeLists.txt  constants.h  csv.h  csv_writer.h  datastore.h  general.h  kernels.h  load_balancing.h  logging.h  occupancy.h  profiler.h  queue.h
